Update build scripts

--- a/make.config
+++ b/make.config
@@ -1,6 +1,9 @@
 -include ./.env.local
 include ./envfile
 
+TARGET?=$(DEFAULT_TARGET)
+BUILDDIR?=$(DEFAULT_BUILDDIR)
+
 CFLAGS=-O2 -g
 CPPFLAGS=
 LDFLAGS=
