Add bootable FAT12 image

--- a/src/boot/Makefile
+++ b/src/boot/Makefile
@@ -14,7 +14,7 @@ $(BOOT_SRC)
 
 OBJS=$(patsubst %, $(OBJDIR)/%.o, $(SRC))
 
-.PHONY: all clean install-headers
+.PHONY: all clean install install-headers $(ARCH)-image
 
 all: $(BOOT)
 
@@ -25,11 +25,35 @@ $(OBJDIR)/%.S.o: %.S
 	@mkdir -p $(@D)
 	@$(AS) $(ASFLAGS) -o $@ $<
 
+i386-image: $(BOOT)
+	@dd \
+		if=/dev/null \
+		of=$(BOOT_IMAGE) \
+		bs=$(BOOT_SECTOR_SIZE) \
+		count=0 \
+		seek=$(BOOT_SECTORS)
+	@dd \
+		if=$(BOOT) \
+		of=$(BOOT_IMAGE) \
+		bs=$(BOOT_SECTOR_SIZE) \
+		count=1 \
+		conv=notrunc
+	@mformat -i $(BOOT_IMAGE) \
+		-v "$(PROJECT_NAME)" \
+		-T $(BOOT_SECTORS) \
+		-h $(BOOT_HEADS) \
+		-s $(BOOT_TRACK_SECTORS) \
+		-r $(BOOT_ROOT_ENTRIES) \
+		-L $(BOOT_FAT) \
+		-R $(BOOT_RESERVED) \
+		-k
+
 clean:
 	@rm -f $(BOOT)
+	@rm -f $(BOOT_IMAGE)
 	@rm -f $(OBJS) *.o */*.o */*/*.o
 	@rm -f $(OBJS:.o=.d) *.d */*.d */*/*.d
 
-install: $(BOOT)
+install: $(BOOT) $(ARCH)-image
 
 install-headers:
