Update boot sector source structure; add global version include

--- a/make.config
+++ b/make.config
@@ -7,18 +7,19 @@ BUILDDIR?=$(DEFAULT_BUILDDIR)
 CFLAGS=-O2 -g
 CPPFLAGS=
 LDFLAGS=
-ASFLAGS=--warn
+ASFLAGS=--warn -g
 
 COMPONENTS=\
 boot \
 libc \
 kernel
 
-PROJECT_NAME=cosmos
-
 BUILDDIR:=$(shell realpath $(BUILDDIR))
 SRCDIR:=$(PWD)/src
 TOOLSDIR:=$(PWD)/tools
+
+PROJECT_NAME=andromeda
+PROJECT_INCLUDEDIR=$(SRCDIR)/sys/include
 
 SYSROOT=$(BUILDDIR)/sysroot
 INSTALL_PREFIX=/usr
