--- a/src/boot/arch/i386/make.config
+++ b/src/boot/arch/i386/make.config
@@ -1,4 +1,6 @@
-BOOT_ARCH_ASFLAGS=
+BOOT_ARCH_CFLAGS=
+BOOT_ARCH_CPPFLAGS=-I$(ARCHDIR)
+BOOT_ARCH_ASFLAGS=-I$(ARCHDIR)
 BOOT_ARCH_LDFLAGS=--oformat=binary
 
 BOOT_ARCH_SRC=\
