--- a/src/kernel/make.config
+++ b/src/kernel/make.config
@@ -1,5 +1,5 @@
 KERNEL_CFLAGS=-ffreestanding -Wall -Wextra
-KERNEL_CPPFLAGS=-D__is_kernel -Iinclude -I../libc/include
+KERNEL_CPPFLAGS=-D__is_kernel -Iinclude -I$(INSTALL_INCLUDEDIR)
 KERNEL_LDFLAGS=
 KERNEL_LIBS=-nostdlib -lk -lgcc
 
