--- a/src/boot/arch/i386/make.config
+++ b/src/boot/arch/i386/make.config
@@ -1,10 +1,10 @@
 BOOT_ARCH_CFLAGS=
-BOOT_ARCH_CPPFLAGS=-I$(ARCHDIR)
-BOOT_ARCH_ASFLAGS=-I$(ARCHDIR)
-BOOT_ARCH_LDFLAGS=--oformat=binary
+BOOT_ARCH_CPPFLAGS=
+BOOT_ARCH_ASFLAGS=
+BOOT_ARCH_LDFLAGS=
 
-BOOT_ARCH_SRC=\
-$(ARCHDIR)/boot.S
+STAGE1_SRCDIR=stage1
+STAGE2_SRCDIR=stage2
 
 FAT_ENTRY_SIZE=32
 BOOT_SECTOR_SIZE=512
