--- a/src/boot/arch/i386/make.config
+++ b/src/boot/arch/i386/make.config
@@ -10,7 +10,7 @@ FAT_ENTRY_SIZE=32
 BOOT_SECTOR_SIZE=512
 BOOT_SECTORS=2880
 BOOT_HEADS=2
-BOOT_TRACK_SECTORS=18
+BOOT_SECTORS_TRACK=18
 BOOT_READ_SECTORS=14
 BOOT_ROOT_ENTRIES=$(shell echo \
 '( $(BOOT_READ_SECTORS) * $(BOOT_SECTOR_SIZE) / $(FAT_ENTRY_SIZE) )' \
