--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,19 +1,24 @@
 # Module recursed by global Makefile
 
+
 ARCHDIR := arch/$(ARCH)
+
 
 # Architecture-specific configuration
 # Source files configured with ARCH_SRC
 # Custom targets configured with ARCH_TARGETS
 -include $(ARCHDIR)/build.mk
 
+
 INCLUDEDIR	:= $(CURDIR)/include
 OBJDIR		:= $(BUILDDIR)/kernel
+
 
 # Source files
 SRC := \
 	$(ARCH_SRC:%=$(ARCHDIR)/%) \
 	main.c
+
 
 # Generate object paths
 # Add source extensions to %.o filter
@@ -27,16 +32,22 @@ $(foreach obj, $(filter %.o, \
 $(OBJDIR)/$(ARCHDIR)/crtend.o \
 $(OBJDIR)/$(ARCHDIR)/crtn.o
 
+
 # Flags
 CFLAGS		+= -ffreestanding -Wall -Wextra
 CPPFLAGS	+= -D__is_kernel -I$(INCLUDEDIR) -I$(INSTALL_INCLUDEDIR)
 LDFLAGS		+=
 LIBS		+= -nostdlib -lk -lgcc
 
-# Targets
+
+
+### Targets
+
+
 .PHONY: all env install install-headers install-kernel
 
 all: env $(KERNEL) $(ARCH_TARGETS)
+
 
 # Check environment variables
 env:
@@ -47,17 +58,20 @@ env:
 	@test $${INSTALL_LIBDIR}
 	@test $${INSTALL_BOOTDIR}
 
+
 # Link kernel objects
 # Library arguments must be placed after the kernel objects
 $(KERNEL): $(OBJS) $(ARCHDIR)/linker.ld
 	@echo "  CC		$(@F)"
 	@$(CC) -MD $(CFLAGS) $(LDFLAGS) -T$(ARCHDIR)/linker.ld -o $@ $(OBJS) $(LIBS)
 
-# C runtime generated objects
+
+# C runtime objects
 $(OBJDIR)/$(ARCHDIR)/crtbegin.o $(OBJDIR)/$(ARCHDIR)/crtend.o:
 	@mkdir -p $(@D)
 	@obj=$$($(CC) $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) -print-file-name=$(@F)) && \
 		cp "$${obj}" $@
+
 
 # C source
 $(OBJDIR)/%.o: %.c
@@ -65,22 +79,27 @@ $(OBJDIR)/%.o: %.c
 	@echo "  CC		$(@F)"
 	@$(CC) -MD $(CFLAGS) $(CPPFLAGS) -o $@ -c $<
 
+
 # Assembly source
 $(OBJDIR)/%.o: %.S
 	@mkdir -p $(@D)
 	@echo "  AS		$(@F)"
 	@$(CC) -MD $(CFLAGS) $(CPPFLAGS) -o $@ -c $<
 
+
 # Install headers and kernel executable to sysroot
 install: install-headers install-kernel
+
 
 install-headers: env
 	@mkdir -p $(INSTALL_INCLUDEDIR)
 	@cp -R --preserve=timestamps $(INCLUDEDIR)/. $(INSTALL_INCLUDEDIR)/.
 
+
 install-kernel: env $(KERNEL) $(ARCH_TARGETS)
 	@mkdir -p $(INSTALL_BOOTDIR)
 	@cp $(KERNEL) $(INSTALL_BOOTDIR)
+
 
 # Dependencies
 -include $(OBJS:.o=.d)
